--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "main": "background.js",
   "dependencies": {
-    "@types/seedrandom": "^2.4.28",
     "jimp": "^0.8.2",
     "seedrandom": "^3.0.3",
-    "vue": "^2.6.10"
+    "uuid": "^3.3.3",
+    "vue": "^2.6.10",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@types/seedrandom": "^2.4.28",
+    "@types/uuid": "^3.4.5",
     "@vue/cli-plugin-typescript": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "electron": "^6.0.0",
