--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"main": "background.js",
 	"dependencies": {
 		"color-blend": "^2.0.7",
+		"custom-electron-titlebar": "^3.1.0",
 		"jimp": "^0.8.2",
 		"mathjs": "^6.2.1",
 		"seedrandom": "^3.0.3",
