--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"seedrandom": "^3.0.3",
 		"uuid": "^3.3.3",
 		"vue": "^2.6.10",
+		"vuedraggable": "^2.23.0",
 		"vuex": "^3.1.1"
 	},
 	"devDependencies": {
