--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"sass-loader": "^7.1.0",
 		"typescript": "^3.4.3",
 		"vue-cli-plugin-electron-builder": "^1.4.0",
-		"vue-template-compiler": "^2.6.10"
+		"vue-template-compiler": "^2.6.10",
+		"worker-loader": "^2.0.0"
 	}
 }
