--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@msgpack/msgpack": "^1.9.0",
 		"color-blend": "^2.0.7",
 		"custom-electron-titlebar": "^3.1.0",
+		"electron-unhandled": "^3.0.0",
 		"jimp": "^0.8.2",
 		"mathjs": "^6.2.1",
 		"seedrandom": "^3.0.3",
