--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"mathjs": "^6.2.1",
 		"pngjs": "^3.4.0",
 		"seedrandom": "^3.0.3",
+		"semver": "^6.3.0",
 		"uuid": "^3.3.3",
 		"vue": "^2.6.10",
 		"vuedraggable": "^2.23.0",
@@ -36,6 +37,7 @@
 		"@types/mathjs": "^6.0.2",
 		"@types/pngjs": "^3.3.2",
 		"@types/seedrandom": "^2.4.28",
+		"@types/semver": "^6.0.2",
 		"@types/uuid": "^3.4.5",
 		"@vue/cli-plugin-typescript": "^3.11.0",
 		"@vue/cli-service": "^3.11.0",
