--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"semver": "^6.3.0",
 		"uuid": "^3.3.3",
 		"vue": "^2.6.10",
+		"vue-i18n": "^8.14.1",
 		"vuedraggable": "^2.23.0",
 		"vuex": "^3.1.1",
 		"vuex-undo-redo": "^1.1.4"
