--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"pngjs": "^3.4.0",
 		"seedrandom": "^3.0.3",
 		"semver": "^6.3.0",
+		"utif": "^3.1.0",
 		"uuid": "^3.3.3",
 		"vue": "^2.6.10",
 		"vue-i18n": "^8.14.1",
@@ -41,6 +42,7 @@
 		"@types/pngjs": "^3.3.2",
 		"@types/seedrandom": "^2.4.28",
 		"@types/semver": "^6.0.2",
+		"@types/utif": "^3.0.0",
 		"@types/uuid": "^3.4.5",
 		"@vue/cli-plugin-typescript": "^3.11.0",
 		"@vue/cli-service": "^3.11.0",
