Update dependencies :rocket:

--- a/package.json
+++ b/package.json
@@ -12,46 +12,46 @@
 	},
 	"main": "background.js",
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^1.2.22",
-		"@fortawesome/free-regular-svg-icons": "^5.10.2",
-		"@fortawesome/free-solid-svg-icons": "^5.10.2",
-		"@fortawesome/vue-fontawesome": "^0.1.7",
-		"@msgpack/msgpack": "^1.9.0",
-		"@syuilo/custom-electron-titlebar": "^3.2.0",
-		"color-blend": "^2.0.7",
-		"electron-unhandled": "^3.0.0",
-		"hasha": "^5.1.0",
-		"image-type": "^4.1.0",
-		"jpeg-js": "^0.3.6",
-		"mathjs": "^6.2.1",
-		"pngjs": "^3.4.0",
-		"seedrandom": "^3.0.3",
-		"semver": "^6.3.0",
-		"utif": "^3.1.0",
-		"uuid": "^3.3.3",
-		"vue": "^2.6.10",
-		"vue-i18n": "^8.14.1",
-		"vuedraggable": "^2.23.0",
-		"vuex": "^3.1.1",
-		"vuex-undo-redo": "^1.1.4"
+		"@fortawesome/fontawesome-svg-core": "1.2.25",
+		"@fortawesome/free-regular-svg-icons": "5.11.2",
+		"@fortawesome/free-solid-svg-icons": "5.11.2",
+		"@fortawesome/vue-fontawesome": "0.1.8",
+		"@msgpack/msgpack": "1.9.3",
+		"@syuilo/custom-electron-titlebar": "3.2.0",
+		"color-blend": "2.0.8",
+		"electron-unhandled": "3.0.1",
+		"hasha": "5.1.0",
+		"image-type": "4.1.0",
+		"jpeg-js": "0.3.6",
+		"mathjs": "6.2.5",
+		"pngjs": "3.4.0",
+		"seedrandom": "3.0.5",
+		"semver": "6.3.0",
+		"utif": "3.1.0",
+		"uuid": "3.3.3",
+		"vue": "2.6.10",
+		"vue-i18n": "8.15.0",
+		"vuedraggable": "2.23.2",
+		"vuex": "3.1.2",
+		"vuex-undo-redo": "1.1.4"
 	},
 	"devDependencies": {
-		"@types/hasha": "^3.0.1",
-		"@types/jpeg-js": "^0.3.7",
-		"@types/mathjs": "^6.0.2",
-		"@types/pngjs": "^3.3.2",
-		"@types/seedrandom": "^2.4.28",
-		"@types/semver": "^6.0.2",
-		"@types/utif": "^3.0.0",
-		"@types/uuid": "^3.4.5",
-		"@vue/cli-plugin-typescript": "^3.11.0",
-		"@vue/cli-service": "^3.11.0",
-		"electron": "^6.0.0",
-		"sass": "^1.18.0",
-		"sass-loader": "^7.1.0",
-		"typescript": "^3.4.3",
-		"vue-cli-plugin-electron-builder": "^1.4.0",
-		"vue-template-compiler": "^2.6.10",
-		"worker-loader": "^2.0.0"
+		"@types/hasha": "3.0.1",
+		"@types/jpeg-js": "0.3.7",
+		"@types/mathjs": "6.0.2",
+		"@types/pngjs": "3.4.0",
+		"@types/seedrandom": "2.4.28",
+		"@types/semver": "6.2.0",
+		"@types/utif": "3.0.0",
+		"@types/uuid": "3.4.6",
+		"@vue/cli-plugin-typescript": "4.0.5",
+		"@vue/cli-service": "4.0.5",
+		"electron": "7.1.2",
+		"sass": "1.23.7",
+		"sass-loader": "8.0.0",
+		"typescript": "3.7.2",
+		"vue-cli-plugin-electron-builder": "1.4.2",
+		"vue-template-compiler": "2.6.10",
+		"worker-loader": "2.0.0"
 	}
 }
